# mpcc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cmake/: AcadosUtils.cmake
include/mpcc/: acados_interface.h  casadi_unicycle_interface.h  logger.h  map_util.h  mpcc_acados.h  mpcc_base.h  mpcc_core.h  mpcc_di_acados.h  mpcc_ros.h  orientable.h  tube_gen.h  types.h  utils.h
include/mpcc/common/: map_util.h  mpcc_base.h  mpcc_core.h  spline.h  tube_gen.h  types.h  utils.h
include/mpcc/double_integrator/: casadi_double_integrator_interface.h  mpcc_di_acados.h
include/mpcc/ros/: logger.h  mpcc_ros.h
include/mpcc/unicycle/: casadi_unicycle_interface.h  mpcc_unicycle_acados.h
launch/: jackal_di_track.launch  jackal_mpc_track.launch  mvsim.launch  online_async.launch
msg/: RLState.msg
params/: double_integrator_mpcc.yaml  double_integrator_mpcc1.yaml  double_integrator_mpcc2.yaml  meta_train.yaml  unicycle_model_mpcc.yaml
params/meta_mpc/: double_integrator_mpcc0.yaml  double_integrator_mpcc1.yaml  double_integrator_mpcc2.yaml  unicycle_model_mpcc0.yaml  unicycle_model_mpcc1.yaml  unicycle_model_mpcc2.yaml  zz_double_integrator_mpcc0.yaml  zz_double_integrator_mpcc1.yaml  zz_unicycle_model_mpcc0.yaml  zz_unicycle_model_mpcc1.yaml
rviz/: planner.rviz
scripts/bicycle_track/: acados_settings.py  acados_settings_dev.py  bicycle_model.py  main.py
scripts/double_integrator_mpcc/: mpcc_model.py  mpcc_ocp.py
scripts/simulator/: ice_sim.py
scripts/train/: RobotEnv.py  launch_training.py  meta_model_server.py  meta_train_realworld.py  model_server_di.py  pearl_server.py  test_pearl.py  train_meta_simple.py  train_realworld.py
scripts/train/oyster/: Bezier.py  ParamLoader.py  Plotter.py  RobotEnv.py  RobotMPC.py  TrajLibGen.py  Tubes.py  launch_experiment.py  launch_training.py  sim_policy.py
scripts/train/oyster/configs/: bicycle_model_mpcc1.yaml  default.py  double_integrator_mpcc.yaml  unicycle_model_mpcc0.yaml  unicycle_model_mpcc1.yaml
scripts/train/oyster/rlkit/core/: rl_algorithm.py
scripts/train/oyster/rlkit/samplers/: util.py
scripts/train/oyster/rlkit/torch/: pytorch_util.py
scripts/train/oyster/rlkit/torch/sac/: agent.py
scripts/tube_gen/: tube_lp_gen.py
scripts/unicycle_model_mpcc/: mpcc_model.py  mpcc_ocp.py
src/mpcc/: casadi_unicycle_interface.cpp  logger.cpp  mpcc_acados.cpp  mpcc_core.cpp  mpcc_di_acados.cpp  mpcc_ros.cpp  py_mpcc.cpp
src/mpcc/common/: mpcc_core.cpp
src/mpcc/double_integrator/: casadi_double_integrator_interface.cpp  mpcc_di_acados.cpp
src/mpcc/ros/: logger.cpp  mpcc_node.cpp  mpcc_ros.cpp
src/mpcc/unicycle/: casadi_unicycle_interface.cpp  mpcc_unicycle_acados.cpp
